Bug 314959 - Exporting contacts to vcard overwrites already exported cards with same name
Summary: Exporting contacts to vcard overwrites already exported cards with same name
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-12 01:14 UTC by Torsten Mohr
Modified: 2013-02-14 18:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Torsten Mohr 2013-02-12 01:14:22 UTC
I use version 4.7.2.  When i export single cards and two cards have same first name (and) last name then one of the entries is overwritten.  There would be other ways to solve it like generating an index number.


Reproducible: Always

Steps to Reproduce:
1. have two entries with same first name / last name
2. export single VCF to a directory
3. thats all, there's only one VCF finally in the exports directory
Actual Results:  
one VCF is either overwritten or not written at all

Expected Results:  
there are two (or more) VCF

I use 4.7.2 in OpenSuse 12.1, but i fear updating manually.
Comment 1 Laurent Montel 2013-02-12 08:53:30 UTC
waou 4.7.2 ! ok we release 4.10.0 last week :)
And I think it will better for you to upgrade.

But I will look at if I can reproduce this bug soon.
Comment 2 Torsten Mohr 2013-02-12 17:39:24 UTC
Am Dienstag, 12. Februar 2013, 08:53:30 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=314959
> 
> Laurent Montel <montel@kde.org> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |montel@kde.org
> 
> --- Comment #1 from Laurent Montel <montel@kde.org> ---
> waou 4.7.2 ! ok we release 4.10.0 last week :)
> And I think it will better for you to upgrade.
> 
> But I will look at if I can reproduce this bug soon.

Thanks Laurel, i experienced several problems when updating single packets, 
that is why i use this old version.

One other thing i just noticed:
When updating the birthday of somebody (the birthday was set before) and just 
updating the year, then clicking "Ok" does not update the birthday, you have 
to additionally click on the day in the calendar.

So a birthday is already set, like 4.5.2005 and i just change to 4.5.1971 by 
text-editing the year.  Then clicking "Ok" does not update the changed date.


Best regards
Torsten
Comment 3 Laurent Montel 2013-02-13 09:29:50 UTC
"When updating the birthday of somebody (the birthday was set before) and just updating the year, then clicking "Ok" does not update the birthday, you have to additionally click on the day in the calendar. So a birthday is already set, like 4.5.2005 and i just change to 4.5.1971 by text-editing the year. Then clicking "Ok" does not update the changed date."


could you explain more please ?
Comment 4 Torsten Mohr 2013-02-13 20:51:28 UTC
Am Mittwoch, 13. Februar 2013, 09:29:50 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=314959
> 
> --- Comment #3 from Laurent Montel <montel@kde.org> ---
> "When updating the birthday of somebody (the birthday was set before) and
> just updating the year, then clicking "Ok" does not update the birthday,
> you have to additionally click on the day in the calendar. So a birthday is
> already set, like 4.5.2005 and i just change to 4.5.1971 by text-editing
> the year. Then clicking "Ok" does not update the changed date."
> 
> 
> could you explain more please ?

Hello Laurel,

ok, let me try.  I have a person in my contacts that has a birthday set to 
4.5.2005.  That is ok, except the year, so i want to change just the year to 
1971, which would be the correct date (4.5.1971).

So i open the birthday date selector and it has 2005 set as year.  I left-
click on the year and it becomes editable.  I change it to 1971 (by keayboard) 
andhit enter.  The date selector is still visible and has 4.5.1971 selected, 
but the field that reads "birthday" still says 4.5.2005.  When i then click 
"OK", then the old date 4.5.2005 is taken over, not the date 4.5.1971.

If instead of clicking "OK" i'd first click on the "4" (as 4th day in the 
month) then the birthday field was updated.

Did it become clearer what i wanted to describe?


Best regards
Torsten
Comment 5 Laurent Montel 2013-02-14 07:33:39 UTC
Ok I understand
will try to fix it
Comment 6 Laurent Montel 2013-02-14 08:34:04 UTC
Git commit 70842aaea6c9a732a1c1dd42550569d018d8580c by Montel Laurent.
Committed on 14/02/2013 at 09:33.
Pushed by mlaurent into branch 'KDE/4.10'.

Start to fix bug report on "Bug 314959 - Exporting contacts to vcard overwrites already exported cards with same name"

I fixed select birtday
(will fix in 4.10.1)

M  +10   -3    akonadi/contact/editor/kdatepickerpopup.cpp
M  +2    -0    akonadi/contact/editor/kdatepickerpopup_p.h

http://commits.kde.org/kdepimlibs/70842aaea6c9a732a1c1dd42550569d018d8580c
Comment 7 Laurent Montel 2013-02-14 12:06:23 UTC
it's overwrite. In 4.8.x I added a dialogbox to signal that we will overwrite file.
So perhaps we must to allow to rename it.
Comment 8 Laurent Montel 2013-02-14 12:15:44 UTC
Git commit 205bb6ccfc6c82cbd9ddb9d3c66d1ec1a621b5ed by Montel Laurent.
Committed on 14/02/2013 at 13:14.
Pushed by mlaurent into branch 'master'.

Move renamefiledialog to pimcommon (for fixing 314959)

M  +0    -1    messageviewer/CMakeLists.txt
M  +15   -14   messageviewer/util.cpp
M  +1    -0    pimcommon/CMakeLists.txt
R  +2    -2    pimcommon/renamefiledialog.cpp [from: messageviewer/renamefiledialog.cpp - 098% similarity]
R  +7    -3    pimcommon/renamefiledialog.h [from: messageviewer/renamefiledialog.h - 092% similarity]

http://commits.kde.org/kdepim/205bb6ccfc6c82cbd9ddb9d3c66d1ec1a621b5ed
Comment 9 Laurent Montel 2013-02-14 12:45:37 UTC
Git commit f1c937731231ab60a2870998bf6c225f40754d8c by Montel Laurent.
Committed on 14/02/2013 at 13:45.
Pushed by mlaurent into branch 'master'.

Fix Bug 314959 - Exporting contacts to vcard overwrites already exported cards with same name

FIXED-IN: 4.11

M  +12   -6    kaddressbook/xxport/csv/csv_xxport.cpp
M  +12   -7    kaddressbook/xxport/gmx/gmx_xxport.cpp
M  +16   -8    kaddressbook/xxport/ldif/ldif_xxport.cpp
M  +18   -14   kaddressbook/xxport/vcard/vcard_xxport.cpp

http://commits.kde.org/kdepim/f1c937731231ab60a2870998bf6c225f40754d8c
Comment 10 Torsten Mohr 2013-02-14 16:58:05 UTC
Great, thanks a lot!

Am Donnerstag, 14. Februar 2013, 07:33:39 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=314959
> 
> --- Comment #5 from Laurent Montel <montel@kde.org> ---
> Ok I understand
> will try to fix it
Comment 11 Laurent Montel 2013-02-14 18:03:18 UTC
now you need to upgrade version (4.11 ok in july :) )
But you can test 4.10.1 that we will release soon :)

Regards