Fix Bug 314959 - Exporting contacts to vcard overwrites already exported cards with same name

FIXED-IN: 4.11
BUG: 314959