kaddressbook/xxport/gmx/gmx_xxport.cpp
@@ -78,6 +78,7 @@
 */
 
 #include "gmx_xxport.h"
+#include "pimcommon/renamefiledialog.h"
 
 #include <KCodecs>
 #include <KDebug>
@@ -350,13 +351,17 @@ bool GMXXXPort::exportContacts( const KABC::AddresseeList &list ) const
   }
 
   if ( QFileInfo( url.isLocalFile() ?
-    url.toLocalFile() : url.path() ).exists() ) {
-    if ( KMessageBox::questionYesNo(
-           parentWidget(),
-           i18n( "Do you want to overwrite file \"%1\"",
-                 url.isLocalFile() ? url.toLocalFile() : url.path() ) ) == KMessageBox::No ) {
-      return false;
-    }
+                  url.toLocalFile() : url.path() ).exists() ) {
+      if ( url.isLocalFile() && QFileInfo( url.toLocalFile() ).exists() ) {
+          PimCommon::RenameFileDialog::RenameFileDialogResult result = PimCommon::RenameFileDialog::RENAMEFILE_IGNORE;
+          PimCommon::RenameFileDialog *dialog = new PimCommon::RenameFileDialog(url, false, parentWidget());
+          result = static_cast<PimCommon::RenameFileDialog::RenameFileDialogResult>(dialog->exec());
+          if ( result == PimCommon::RenameFileDialog::RENAMEFILE_RENAME ) {
+              url = dialog->newName();
+          } else if (result == PimCommon::RenameFileDialog::RENAMEFILE_IGNORE) {
+              return true;
+          }
+      }
   }
 
   if ( !url.isLocalFile() ) {
